--- a/src/Presentacion/Login.form
+++ b/src/Presentacion/Login.form
@@ -28,20 +28,18 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="lblValidacion" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="lblTitulo" alignment="0" min="-2" pref="301" max="-2" attributes="0"/>
-                  <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                      <Component id="btnIngresar" min="-2" pref="77" max="-2" attributes="0"/>
-                      <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="lblContraseña" pref="111" max="32767" attributes="0"/>
-                              <Component id="lblUsuario" max="32767" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="txtUsuario" pref="249" max="32767" attributes="0"/>
-                              <Component id="txtContrasena" max="32767" attributes="0"/>
-                          </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="lblContraseña" pref="111" max="32767" attributes="0"/>
+                          <Component id="lblUsuario" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="txtUsuario" pref="249" max="32767" attributes="0"/>
+                          <Component id="txtContrasena" max="32767" attributes="0"/>
                       </Group>
                   </Group>
+                  <Component id="btnIngresar" alignment="1" min="-2" pref="86" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="31" max="32767" attributes="0"/>
           </Group>
